# RobotAlgorithms

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  matrix_solver_stability_demo.cpp  run_imu_integration.cpp  test_icp.cpp  test_ndt.cpp
EPFL/: aquarius_source.pcd  aquarius_target.pcd  kneeling_lady_source.pcd  kneeling_lady_target.pcd
include/: common.h  icp3d.h  imu.h  imu_integration.h  io_utils.h  nav_state.h  ndt3d.h  util.h
include/common/: math_utils.h
notebooks/: refer.ipynb
scripts/: fit_plane.py  plot3d.plt
src/: icp3d.cpp  imu_integration.cpp  io_uitls.cpp  ndt3d.cpp  util.cpp
test/: CMakeLists.txt  test_math_utils.cpp
